# summ

./: .dockerignore  .env.docker  .env.example  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 0_metrics_overview.ipynb  1_common_summarization.ipynb  2_baseline_solution.ipynb  3.1_coreference_resolution.ipynb  3.2_subsentence_splitting.ipynb  3.3_compression.ipynb  3_extended_solution.ipynb  4_hybrid_approach.ipynb  common_summarization_1.ipynb
notebooks/dataset_utils/: cnndm_preprocessor.py  create_sentence_ranking.py  dataset.py  dataset_loader.py
scripts/: download_spacy_model.sh  get_dataset_sample.py
summ/: __main__.py  app.py  settings.py
summ/models/: request.py  response.py
summ/static/: index.html
