[tool.poetry]
name = "summ"
version = "0.1.0"
description = "The project demonstates some approaches to constrained summarization"
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
fastapi = "^0.66.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
python-dotenv = "^0.18.0"
regex = "^2021.7.6"
spacy = "^3.1.0"
torch = "^1.9.0"


[tool.poetry.dev-dependencies]
ipykernel = "^6.0.1"
pylint = "^2.9.3"
notebook = "^6.4.0"
bert-extractive-summarizer = "^0.7.1"
sentencepiece = "^0.1.96"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
